Added encrypting for users name, BAD realisation!